# ml-template

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
